# Mattersplatter

./: .gitignore  README.md  compiler.c  interpreter.c  jump_stack.c  lexer.c  main.c  mattersplatter.1.scd  meson.build  parser.c
doc/: matsplat_tokenize.3.scd  mattersplatter.3.scd
include/: compiler.h  interpreter.h  jump_stack.h  lexer.h  mattersplatter.h  parser.h  tokens.h
lib/: compiler.c  interpreter.c  jump_stack.c  lexer.c  parser.c
